starrs/sonarr/resources/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: starrs
  labels:
    app: sonarr
  name: sonarr
spec:
  ports:
    - name: "sonarr-8989"
      port: 8989
      protocol: TCP
      targetPort: 8989
  selector:
    app: sonarr
